    - ":" is not filtered from the BibTeX keys any more (patch 3582376 by Oscar Gustafsson)
    - Changed internal look&feel setting (based on patch 3580605)
    - Custom importers nested in jars should be supported now (bug 3582838)
    - PDFContentImporter uses the DOI fetcher to fetch the BibTeX for the entry (if a DOI exists at the first page).
2.9 beta
    - Replaced notification dialog after moving/renaming linked file by status message.
    - Replaced dialog warnings about empty/duplicate key in entry editor by status line messages,
      to prevent lockup if Save button is pressed directly.
    - Replaced window icon with 48x48 image.
    - [experimental] Added local undo/redo handling for entry editor text fields.
    - Added special field functionality for ranking, marking as relevant,
      marking as quality assured, and prioritizing. Can be enabled by "Entry table columns".
      Based on the work by Igor Chernyavsky, Florian Straßer, and Marius Kleiner.
    - Added PDF preview functionality to the preview panel. Configurable via "Entry preview" settings.
    - Group edit dialog now closes when Escape is pressed.
    - Fixed MS bib import, month was lost on import.
    - Generate key action in entry editor now honors key overwrite settings.
    - Fixed bug when importing XMP data from PDF, file will now be linked from the new entry.
    - Fixed bug in layout processing - quoted formatter argments are now handled correctly.
    - Fixed bug 3545394: null and curly brackets in custom export filter.
    - Added "Manage keywords" popup menu to manage common keywords of selected entries.
    - Added support for pushing citations to TeXstudio (requires TeXstudio >=2.4)
    - Text-based citations can now be imported using FreeCite by Brown University
      (http://freecite.library.brown.edu). By Kai Mindermann and Daniel Maurer.
    - JabRef supports synchronization of unlinked PDFs. Feature request "[2163626] Scan database - find unlinked files".